# QuantAIvus

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MarketMind Directory Structure.md  PRIVACY_POLICY.md  Programming Guidelines.md  README.md  VERSION.md  ci.yaml  pom.xml  pre-commit-config.yaml  pytest.ini  test.parquet
.github/workflows/: ci.yaml
actions-runner/: .credentials  .credentials_rsaparams  .runner  .service
cpp/: CMakeLists.txt  setup.ps1
cpp/src/: inference_benchmark.cpp  main.cpp
cpp/src/api/: api_server.cpp  api_server.h
cpp/src/backtesting/: Evaluator.cpp  Evaluator.h  Trainer.cpp  Trainer.h
cpp/src/data/: DataLoader.cpp  DataLoader.h  Preprocessor.cpp  Preprocessor.h
cpp/src/inference/: FeatureEngineering.cpp  FeatureEngineering.h  ModelInference.cpp  ModelInference.h
data/: StockPredictionApp Directory Structure.markdown  config.yml
java/resources/config/: application.properties
java/resources/css/: dashboard.css  styles.css
java/resources/fxml/: Dashboard.fxml  Login.fxml  RootLayout.fxml  Settings.fxml
java/src/com/example/: MainApp.java
java/src/com/example/integration/: BackendClient.java  InferenceJNI.java  PythonRunner.java
java/src/com/example/models/: StockData.java  UserPrefs.java
java/src/com/example/persistence/: UserPrefsManager.java
java/src/com/example/services/: DataFetchService.java  UserAuthService.java
java/src/com/example/ui/controllers/: DashboardController.java  LoginController.java  SettingsController.java
java/src/com/example/ui/views/: CustomChartNode.java
java/src/com/example/utils/: .gitkeep  DateUtils.java  JSONParser.java
patchedLibs/pandas-ta-main-local/: MANIFEST.in  bulk_replace_nan.py  requirements.txt  setup.cfg  setup.py
patchedLibs/pandas-ta-main-local/pandas_ta/: core.py
patchedLibs/pandas-ta-main-local/pandas_ta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
patchedLibs/pandas-ta-main-local/pandas_ta/cycles/: ebsw.py
patchedLibs/pandas-ta-main-local/pandas_ta/momentum/: fisher.py  rsx.py
patchedLibs/pandas-ta-main-local/pandas_ta/overlap/: hwma.py  kama.py
patchedLibs/pandas-ta-main-local/pandas_ta/trend/: psar.py
patchedLibs/pandas-ta-main-local/pandas_ta/utils/: _core.py
patchedLibs/pandas-ta-main-local/pandas_ta/volatility/: hwc.py
patchedLibs/tensorflow-onnx-1.17.0/: README.markdown  build.bat  build.sh  setup.py
patchedLibs/tensorflow-onnx-1.17.0/tests/: test_einsum_helper.py
patchedLibs/tensorflow-onnx-1.17.0/tf2onnx/: version.py
patchedLibs/tensorflow-onnx-1.17.0/tf2onnx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/: requirements.txt
python/data/: ib_data_collection.py
python/utils/: config.py  exceptions.py  logger.py  validators.py
srcPy/: requirements.txt  requirementsFreeze.txt  tensorFlowTest.py
srcPy/data/: config.yaml  config_schema.json  data_cleaning.py  data_loader.py  ib_api.py  ib_data_collection.py  preprocessor.py
srcPy/models/: informer_model.py
srcPy/utils/: config.py  exceptions.py  logger.py  validators.py
stock-prediction-app/: pom.xml
stock-prediction-app/src/main/java/com/example/client/: BackendClient.java
stock-prediction-app/src/main/java/com/example/gui/: StockPredictionGUI.java
tests/: run_tests.bat  run_tests.sh
tests/fixtures/: sample.csv  sample_multi_ticker.csv  sample_with_duplicates.csv  sample_with_na.csv  sample_with_outliers.csv
tests/java/com/example/: MainAppTest.java
tests/java/com/example/integration/: BackendClientTest.java  InferenceJNITest.java  PythonRunnerTest.java
tests/java/com/example/models/: StockDataTest.java  UserPrefsTest.java
tests/java/com/example/persistence/: UserPrefsManagerTest.java
tests/java/com/example/services/: DataFetchServiceTest.java  UserAuthServiceTest.java
tests/java/com/example/ui/controllers/: DashboardControllerTest.java  LoginControllerTest.java  SettingsControllerTest.java
tests/java/com/example/ui/views/: CustomChartNodeTest.java
tests/java/com/example/utils/: DateUtilsTest.java  JSONParserTest.java
tests/python/: conftest.py  path_setup.py  test_config.py  test_data_cleaning.py  test_data_loader.py  test_ib_api.py  test_ib_data_collection.py  test_integration.py  test_pipeline_integration.py  test_preprocessor.py
