[metadata]
name = pandas_ta
version = 0.3.15
description = An easy to use Python 3 Pandas Extension with 130+ Technical Analysis Indicators.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kevin Johnson
author_email = appliedmathkj@gmail.com
license = MIT
url = https://github.com/twopirllc/pandas-ta
keywords = technical analysis, trading, python3, pandas

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    numpy>=2.0.0
    pandas>=2.1.4
    six==1.16.0

[options.packages.find]
include =
    pandas_ta*

[options.extras_require]
dev =
    alphaVantage-api
    matplotlib
    mplfinance
    scipy
    sklearn
    statsmodels
    stochastic
    talib
    tqdm
    vectorbt
    yfinance
test =
    ta-lib
